--- a/src/app/core/auth/signin/signin.component.html
+++ b/src/app/core/auth/signin/signin.component.html
@@ -4,21 +4,50 @@
             <div class="col-md-6 offset-md-3">
                 <div class="card shadow">
                     <div class="card-body">
-                        <h4 class="text-center">Signup</h4>
+                        <h4 class="text-center">Login</h4>
                         <form [formGroup]="signinForm">
                             <div class="form-group mb-2">
                                 <label>Email:</label>
                                 <input type="email" class="form-control" placeholder="Enter Email"
-                                    formControlName="email">
+                                    formControlName="email"
+                                    [ngClass]="{ 'is-invalid':signinForm.controls['email']?.touched && f['email'].errors }">
+                                <div class="text-danger"
+                                    *ngIf="signinForm.controls['email']?.touched && signinForm.controls['email']?.errors?.required">
+                                    Email is required
+                                </div>
+                                <div class="text-danger"
+                                    *ngIf="signinForm.controls['email']?.touched && signinForm.controls['email']?.errors?.pattern">
+                                    Invalid email
+                                </div>
                             </div>
                             <div class="form-group mb-2">
                                 <label>Password:</label>
                                 <input type="password" class="form-control" placeholder="Enter Password"
-                                    formControlName="password">
+                                    formControlName="password"
+                                    [ngClass]="{ 'is-invalid':signinForm.controls['password']?.touched && f['password'].errors }">
+                                <div class="text-danger"
+                                    *ngIf="signinForm.controls['password']?.touched && signinForm.controls['password']?.errors?.required">
+                                    Password is required
+                                </div>
                             </div>
                             <div class="mt-4 text-center">
-                                <button class=" btn btn-sm btn-secondary w-100">Signup</button>
-                                <div class="small mt-2">Don't Have an account? <a
+                                <button
+                                    class="btn btn-sm btn-outline-secondary w-100 d-flex align-items-center justify-content-center"
+                                    (click)="signin()" [disabled]="signinForm.invalid">
+                                    <img src="../../../../assets/images/login_gmail_icon.png" class="me-2" height="15">
+                                    Login with Email
+                                </button>
+                                <div class="my-4 position-relative">
+                                    <span class="or">OR</span>
+                                    <div class="border-bottom"></div>
+                                </div>
+                                <button
+                                    class="btn btn-sm btn-outline-secondary w-100 d-flex align-items-center justify-content-center"
+                                    (click)="authService.GoogleAuth()">
+                                    <img src="../../../../assets/images/login_google_icon.png" class="me-2" height="15">
+                                    Signin with Google</button>
+
+                                <div class="small my-2">Don't Have an account? <a
                                         routerLink="/authentication/signup">Create</a> </div>
                             </div>
                         </form>
