--- a/src/app/core/auth/signin/signin.component.scss
+++ b/src/app/core/auth/signin/signin.component.scss
@@ -1,3 +1,20 @@
-#signin{
-    height: 100vh;
+// @import "../../../../styles.scss";
+
+#signin {
+  height: 100vh;
+}
+
+.or {
+  background: white;
+  position: absolute;
+  top: -12px;
+  left: 0;
+  margin: 0 auto;
+  right: 0;
+  width: 50px;
+}
+
+.border-bottom {
+  border-bottom: 1px solid gainsboro;
+  width: 100%;
 }
