--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,19 +1,26 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
+<nav class="navbar navbar-expand-sm bg-light navbar-light shadow">
+    <div class="container-fluid mx-3">
+        <div class="d-flex align-items-center justify-content-between w-100">
+            <div>
+                <a class="me-3" routerLink="/home" routerLinkActive="active">Home</a>
+                <a class="me-3" routerLink="/about-us" routerLinkActive="active">About</a>
+                <a class="me-3" routerLink="/employees" routerLinkActive="active">Employees</a>
+            </div>
+            <div>
+                <div class="dropdown">
+                    <button type="button"
+                        class="btn btn-outline-secondary btn-sm dropdown-toggle d-flex align-items-center"
+                        data-bs-toggle="dropdown">
+                        <img [src]="user?.user?.photoURL ? user.user.photoURL : '../../../assets/images/small_avatar.png'" class="user-img me-2">
+                        <div class="username">{{user?.user?.displayName ? user.user.displayName.split(" ")[0]:'John'}}</div>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" routerLink="/profile" routerLinkActive="active">Profile</a></li>
+                        <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </nav>
 
