--- a/src/app/core/auth/signin/signin.component.html
+++ b/src/app/core/auth/signin/signin.component.html
@@ -32,9 +32,9 @@
                             </div>
                             <div class="mt-4 text-center">
                                 <button
-                                    class="btn btn-sm btn-outline-secondary w-100 d-flex align-items-center justify-content-center"
+                                    class="custom-btn w-100 d-flex align-items-center justify-content-center"
                                     (click)="signin()" [disabled]="signinForm.invalid">
-                                    <img src="../../../../assets/images/login_gmail_icon.png" class="me-2" height="15">
+                                    <img src="../../../../assets/images/login_gmail_icon.png" class="me-2" height="18">
                                     Login with Email
                                 </button>
                                 <div class="my-4 position-relative">
@@ -42,9 +42,9 @@
                                     <div class="border-bottom"></div>
                                 </div>
                                 <button
-                                    class="btn btn-sm btn-outline-secondary w-100 d-flex align-items-center justify-content-center"
+                                    class="custom-btn w-100 d-flex align-items-center justify-content-center"
                                     (click)="authService.GoogleAuth()">
-                                    <img src="../../../../assets/images/login_google_icon.png" class="me-2" height="15">
+                                    <img src="../../../../assets/images/login_google_icon.png" class="me-2" height="20">
                                     Signin with Google</button>
 
                                 <div class="small my-2">Don't Have an account? <a
