--- a/src/app/core/auth/signup/signup.component.html
+++ b/src/app/core/auth/signup/signup.component.html
@@ -59,7 +59,7 @@
                                     formControlName="phone_number">
                             </div>
                             <div class="mt-4 text-center">
-                                <button class="btn btn-sm btn-outline-secondary w-100" (click)="signup()"
+                                <button class="custom-btn w-100" (click)="signup()"
                                     [disabled]="signupForm.invalid">Signup</button>
                                 <div class="small mt-2">Already Have an account? <a
                                         routerLink="/authentication/signin">Log in</a> </div>
