--- a/src/app/main/employees/employees.component.html
+++ b/src/app/main/employees/employees.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="my-5 shadow p-3">
+    <div class="card my-5 shadow p-3">
         <div class="row align-items-center mb-4">
             <!-- <h4>Employees List</h4> -->
             <div class="col">
                 <input class="form-control me-2" placeholder="search employees by name..." [formControl]="search">
             </div>
             <div class="col-auto">
-                <button class="btn btn-secondary" routerLink="/employees/add">Add Employee</button>
+                <button class="custom-btn" routerLink="/employees/add">Add Employee</button>
             </div>
         </div>
         <div class="table-height">
