--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -1,8 +1,11 @@
+@import "../../../styles.scss";
+
 .navbar a {
-  cursor:pointer &.active {
-    border-bottom: 1px solid #cecece;
-    color: #cecece;
-    padding-bottom: 5px;
+  cursor: pointer;
+  &.active {
+    border-bottom: 2px solid $purple;
+    color: $purple;
+    padding-bottom: 7px;
   }
 }
 
