--- a/src/app/main/employees/add-employee/add-employee.component.html
+++ b/src/app/main/employees/add-employee/add-employee.component.html
@@ -1,24 +1,33 @@
-<form [formGroup]="addEmployeeForm" class="my-5">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group mb-3">
-                <label>First Name</label>
-                <input type="text" class="form-control" placeholder="Enter First Name" formControlName="first_name">
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group mb-3">
-                <label>Last Name</label>
-                <input type="text" class="form-control" placeholder="Enter First Name" formControlName="last_name">
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div class="form-group mb-3">
-                <label>Age</label>
-                <input type="number" class="form-control" placeholder="Enter Age" formControlName="age">
-            </div>
+<div class="container my-5">
+    <div class="card shadow">
+        <div class="card-body">
+            <form [formGroup]="addEmployeeForm" class="my-5">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group mb-3">
+                            <label>First Name</label>
+                            <input type="text" class="form-control" placeholder="Enter First Name"
+                                formControlName="first_name">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group mb-3">
+                            <label>Last Name</label>
+                            <input type="text" class="form-control" placeholder="Enter First Name"
+                                formControlName="last_name">
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group mb-3">
+                            <label>Age</label>
+                            <input type="number" class="form-control" placeholder="Enter Age" formControlName="age">
+                        </div>
+                    </div>
+                </div>
+
+                <button class="custom-btn-purple" (click)="employeeId?updateEmployee():addEmployee()"
+                    [disabled]="addEmployeeForm.invalid">{{(employeeId?'Update':'Create')}}</button>
+            </form>
         </div>
     </div>
-    
-    <button class="btn btn-secondary" (click)="employeeId?updateEmployee():addEmployee()" [disabled]="addEmployeeForm.invalid">{{(employeeId?'Update':'Create')}}</button>
-</form>
+</div>
