--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -5,25 +5,30 @@
 
             </div>
             <div class="col">
-                <div class="main py-4" #scrollMe>
-                    <div>
+                <div class="main p-4" #scrollMe *ngIf="isData">
+                    <div *ngFor="let message of messagesReceived">
                         <div class="d-flex align-items-start">
                             <img src="../../assets/images/user_chat_avatar.png" class="me-2" height="35">
                             <div class="message">
                                 <div class="message-received">
-                                    Hi!! Text me once available.
+                                    {{message.message}}
                                 </div>
                                 <div class="time">12/21/22</div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="d-flex align-items-start justify-content-end" *ngFor="let message of messages">
+                    <div class="d-flex align-items-start justify-content-end" *ngFor="let message of messagesSent">
                         <div class="message d-flex flex-column align-items-end">
                             <div class="message-sent">{{message.message}}</div>
                             <div class="time">12/21/22</div>
                         </div>
                         <img src="../../assets/images/small_avatar.png" class="profileImage ms-2" height="35">
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <div *ngIf="!isData" class="loader-wrapper">
+                        <img src="../../assets/images/loader.gif">
                     </div>
                 </div>
                 <app-chat-form></app-chat-form>
