--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -63,3 +63,10 @@
     height: calc(100vh - 244px);
     overflow: auto;
 }
+
+.loader-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 244px);
+}
