--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,72 +1,76 @@
-@import '../../styles.scss';
+@import "../../styles.scss";
 
 .message-received {
-    background-color: #c6cbde;
-    padding: 10px 20px;
-    border-radius: 20px;
-    margin-bottom: 3px;
-    word-break: break-word;
-    border-top-left-radius: 0px;
-    margin-top: 10px;
+  background-color: #c6cbde;
+  padding: 6px 16px;
+  border-radius: 8px;
+  margin-bottom: 2px;
+  word-break: break-word;
+  border-top-left-radius: 0px;
+  margin-top: 10px;
 }
 
 .message-sent {
-    background-color: $orange;
-    color: $white;
-    padding: 10px 20px;
-    border-radius: 20px;
-    margin-bottom: 3px;
-    word-break: break-word;
-    border-top-right-radius: 0px;
-    margin-top: 10px;
+  background-color: $orange;
+  color: $white;
+  padding: 6px 16px;
+  border-radius: 8px;
+  margin-bottom: 2px;
+  word-break: break-word;
+  border-top-right-radius: 0px;
+  margin-top: 10px;
 }
 
 .message {
-    margin-bottom: 12px;
-    font-weight: 500;
-}
-
-.time {
-    color: #c6cbde;
-    font-size: 15px;
-    margin-top: 4px;
+  margin-bottom: 12px;
+  font-weight: 500;
 }
 
 ::placeholder {
-    font-size: 16px;
-
+  font-size: 16px;
 }
 
 .form-control {
-    border-radius: 25px;
-    border: none;
-    background-color: #c6cbde;
-    padding-left: 15px;
-    line-height: 2.375rem;
-    height: 45px;
-    font-size: 14px;
+  border-radius: 25px;
+  border: none;
+  background-color: #c6cbde;
+  padding-left: 15px;
+  line-height: 2.375rem;
+  height: 45px;
+  font-size: 14px;
 }
-.form-control:focus{
-    box-shadow: 0 0 0 1px $orange;
+
+.form-control:focus {
+  box-shadow: 0 0 0 1px $orange;
 }
+
 .img-res {
-    height: 38px;
-    width: 38px;
+  height: 38px;
+  width: 38px;
 }
 
 .date {
-    display: block;
-    text-align: center;
+  text-align: center;
+  background-color: #ffbbb1;
+  padding: 5px;
+  border-radius: 5px;
+  width: 70px;
 }
 
+.time {
+    color: dimgrey;
+    font-size: 12px;
+    font-weight: 400;
+  }
+
 .main {
-    height: calc(100vh - 244px);
-    overflow: auto;
+  height: calc(100vh - 244px);
+  overflow: auto;
 }
 
 .loader-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: calc(100vh - 244px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 244px);
 }
